Revert "Fix issues with long word dont wrap"
This reverts commit c8de27061d4c9c485d127f094aac6646aee5593b.

--- a/blocks/edit/da-editor/da-editor.css
+++ b/blocks/edit/da-editor/da-editor.css
@@ -80,14 +80,6 @@
   box-shadow: rgb(181, 181, 181) 0px 0px 20px 0px;
   border-radius: 10px;
   z-index: 1;
-  overflow-wrap: anywhere;
-  white-space: break-spaces;
-  -webkit-font-variant-ligatures: none;
-  font-variant-ligatures: none;
-  font-feature-settings: "liga" 0;
-  hyphens: auto;
-  -webkit-hyphens: auto;
-  -ms-hyphens: auto;
 }
 
 .ProseMirror-focused {
@@ -618,11 +610,12 @@ td.selectedCell {
 }
 
 .ProseMirror {
-  overflow-wrap: anywhere;
+  word-wrap: break-word;
+  white-space: pre-wrap;
   white-space: break-spaces;
   -webkit-font-variant-ligatures: none;
   font-variant-ligatures: none;
-  font-feature-settings: "liga" 0;
+  font-feature-settings: "liga" 0; /* the above doesn't seem to work in Edge */
 }
 
 .ProseMirror pre {
